# sylar

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: im_server.cpp
docs/: service_discovery_convention.md  分布式IM服务器项目计划书.md
docs/api/: config_module.md  iomaneger.md  log_module.md  net_module.md
docs/db/: mysql.md
examples/: echo_server.cpp
include/api/: article_api_module.hpp  auth_api_module.hpp  common_api_module.hpp  contact_api_module.hpp  emoticon_api_module.hpp  group_api_module.hpp  message_api_module.hpp  organize_api_module.hpp  static_file_module.hpp  talk_api_module.hpp  upload_api_module.hpp  user_api_module.hpp  ws_gateway_module.hpp
include/app/: auth_service.hpp  common_service.hpp  contact_service.hpp  media_service_impl.hpp  message_service.hpp  result.hpp  talk_service.hpp  user_service.hpp
include/base/: endian.hpp  macro.hpp  noncopyable.hpp  singleton.hpp
include/common/: common.hpp  message_preview_map.hpp  message_type.hpp  message_type_map.hpp  validate.hpp
include/config/: config.hpp  config_var.hpp  config_variable_base.hpp  lexical_cast.hpp
include/dao/: contact_apply_dao.hpp  contact_dao.hpp  contact_group_dao.hpp  email_verify_code_dao.hpp  message_dao.hpp  message_forward_map_dao.hpp  message_mention_dao.hpp  message_read_dao.hpp  message_user_delete_dao.hpp  sms_code_dao.hpp  sms_verify_code_dao.hpp  talk_dao.hpp  talk_sequence_dao.hpp  talk_session_dao.hpp  user_auth_dao.hpp  user_dao.hpp  user_login_log_dao.hpp  user_settings_dao.hpp
include/db/: db.hpp  fox_thread.hpp  mysql.hpp  redis.hpp  sqlite3.hpp
include/ds/: array.hpp  bitmap.hpp  cache_status.hpp  dich.hpp  ds_util.hpp  hash_map.hpp  hash_multimap.hpp  lru_cache.hpp  roaring.h  roaring_bitmap.hpp  timed_cache.hpp  timed_lru_cache.hpp
include/email/: email.hpp  smtp.hpp
include/http/: http.hpp  http11_common.hpp  http11_parser.hpp  http_connection.hpp  http_parser.hpp  http_server.hpp  http_servlet.hpp  http_session.hpp  httpclient_parser.hpp  session_data.hpp  uri.hpp  ws_connection.hpp  ws_server.hpp  ws_servlet.hpp  ws_session.hpp
include/io/: coroutine.hpp  iomanager.hpp  lock.hpp  scheduler.hpp  semaphore.hpp  thread.hpp  thread_pool.hpp  timer.hpp  worker.hpp
include/log/: log_appender.hpp  log_event.hpp  log_file.hpp  log_file_manager.hpp  log_formatter.hpp  log_level.hpp  logger.hpp  logger_manager.hpp
include/net/: address.hpp  byte_array.hpp  fd_manager.hpp  hook.hpp  socket.hpp  stream.hpp  tcp_server.hpp
include/ns/: name_server_module.hpp  ns_client.hpp  ns_protobuf.pb.cc  ns_protobuf.pb.h  ns_protobuf.proto  ns_protocol.hpp
include/orm/: column.hpp  index.hpp  orm_util.hpp  table.hpp
include/other/: crypto_module.hpp  library.hpp  memory_pool.hpp  module.hpp  protocol.hpp  zk_client.hpp
include/rock/: rock_protocol.hpp  rock_server.hpp  rock_stream.hpp
include/streams/: async_socket_stream.hpp  load_balance.hpp  service_discovery.hpp  socket_stream.hpp  zlib_stream.hpp
include/system/: application.hpp  daemon.hpp  env.hpp
include/util/: crypto_util.hpp  hash_util.hpp  id_worker.hpp  json_util.hpp  password.hpp  string_util.hpp  time_util.hpp  util.hpp
migrations/: 002_table.sql  010_user_auth.sql  020_contact.sql  030_group.sql  040_message.sql  050_talk.sql  070_article.sql
scripts/: README.md  gateways_run.sh  login_and_group_smoke.sh  send_group_text_smoke.sh  ws_auth_smoke.py  ws_listen_smoke.py
scripts/db/: README.md  migrate.sh
scripts/deploy/: README.md  gateways.sh
scripts/docker/: README.md  nginx.dev.conf
scripts/env/: README.md  start_env.sh  stop_env.sh
scripts/tests/: README.md
scripts/tooling/: setup_media_dir.sh
src/api/: article_api_module.cpp  auth_api_module.cpp  common_api_module.cpp  contact_api_module.cpp  emoticon_api_module.cpp  group_api_module.cpp  media_api_module.cpp  message_api_module.cpp  organize_api_module.cpp  static_file_module.cpp  talk_api_module.cpp  user_api_module.cpp  ws_gateway_module.cpp
src/app/: auth_service.cpp  common_service.cpp  contact_service.cpp  media_service_impl.cpp  message_service.cpp  talk_service.cpp  user_service.cpp  user_service_impl.cpp
src/bootstrap/: cim_server.cpp  gateway_http.cpp  gateway_ws.cpp  im_server.cpp  main.cpp  svc_contact.cpp  svc_group.cpp  svc_media.cpp  svc_message.cpp  svc_presence.cpp  svc_talk.cpp  svc_user.cpp
src/common/: common.cpp  common.hpp  message_preview_map.hpp  message_type.hpp  message_type_map.hpp  result.hpp  validate.hpp
src/config/: config.cpp  config_variable_base.cpp
src/dao/: contact_apply_dao.cpp  contact_dao.cpp  contact_group_dao.cpp  email_verify_code_dao.cpp  message_dao.cpp  message_forward_map_dao.cpp  message_mention_dao.cpp  message_read_dao.cpp  message_user_delete_dao.cpp  sms_code_dao.cpp  sms_verify_code_dao.cpp  talk_dao.cpp  talk_sequence_dao.cpp  talk_session_dao.cpp  user_auth_dao.cpp  user_dao.cpp  user_login_log_dao.cpp  user_settings_dao.cpp
src/db/: fox_thread.cpp  mysql.cpp  redis.cpp  sqlite3.cpp
src/ds/: bitmap.cpp  ds_util.cpp  roaring_bitmap.cpp
src/dto/: article_dto.hpp  contact_dto.hpp  group_dto.hpp  message_dto.hpp  talk_dto.hpp  user_dto.hpp
src/email/: email.cpp  smtp.cpp
src/http/: http.cpp  http11_parser.rl.cpp  http_connection.cpp  (+11 more)
tests/: CMakeLists.txt  README.md  test_address.cpp  test_application.cpp  test_bytearray.cpp  test_config.cpp  test_config_thread_sefa.cpp  test_coroutine.cpp  test_daemon.cpp  test_env.cpp  test_hook.cpp  test_hook2.cpp  test_http.cpp  test_http_connection.cpp  test_http_parser.cpp  test_http_server.cpp  test_iomanager.cpp  test_log_basic.cpp  test_log_performance.cpp  test_log_rotate.cpp  test_scheduler.cpp  test_socket.cpp  test_tcp_server.cpp  test_uri.cpp  test_util.cpp
tests/integration/: media_tests.cpp  media_tests_basic.cpp  media_tests_concurrency.cpp  media_tests_edge_cases.cpp  media_tests_idempotency.cpp  test_helpers.hpp
tests/perf/: README.md
tests/perf/http/: README.md  compare_gateway_http_wrk.py  extreme_test.py  run_gateway_http_wrk.py
tests/perf/ws/: README.md
tests/unit/: .gitkeep
(+382 files in other folders)
